apps/home/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-deployment
  labels:
    app: home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      labels:
        app: home
    spec:
      containers:
      - name: home
        image: kajatools/website:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "0.2"
            memory: "256Mi"
          requests:
            cpu: "0.1" 
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: home-service
spec:
  selector:
    app: home
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
