apps/home/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-service
spec:
  type: NodePort
  selector:
    app: home
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
