apps/home/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: public
  tls:
  - hosts:
    - kaja.tools
    secretName: tls-secret
  rules:
  - host: kaja.tools
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-service
            port:
              number: 80
